--- a/src/components/PokeList.css
+++ b/src/components/PokeList.css
@@ -2,7 +2,7 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
+  grid-gap: 30px;
   padding: 0;
   margin: 0;
 }
@@ -11,6 +11,7 @@
   margin: 0 auto;
   min-width: 200px;
   border: 1px solid #000;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: azure;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
 }
