--- a/src/components/Pokemon.css
+++ b/src/components/Pokemon.css
@@ -9,7 +9,13 @@
   height: 100%;
   padding: 20px 0;
 }
+
 .card__image {
+  transition: all 0.2s ease-in-out;
+}
+.card__image:hover {
+  transform: scale(1.2);
+  cursor: pointer;
 }
 .pokemon__name {
   border-top: 1px solid #000;
