--- a/src/components/TypeList.css
+++ b/src/components/TypeList.css
@@ -11,7 +11,8 @@
   display: inline-block;
   text-transform: uppercase;
   font-weight: bold;
-  padding: 5px;
+  padding: 8px;
   margin: 10px;
   border-radius: 10px;
+  font-size: 11px;
 }
