--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
+body {
+  margin: 0;
+  min-height: 100vh;
+}
+
 .page {
   min-height: 100vh;
   text-align: center;
-  margin: 50px;
+  box-sizing: border-box;
+  padding: 30px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: crimson;
+  color: #fff;
 }
